add seeders and factories

--- a/public/evil-cards/evil-cards.html
+++ b/public/evil-cards/evil-cards.html
@@ -672,14 +672,14 @@
 
   <script>
     $(document).ready(function () {
-      $('.game-chat').toggle();
+      $('.games-chat').toggle();
       $('#chatBtn').click(function () {
-        $('.game-chat').toggle();
+        $('.games-chat').toggle();
         $('#chatBtn').toggle();
       });
 
       $('#chatClose').click(function () {
-        $('.game-chat').toggle();
+        $('.games-chat').toggle();
         $('#chatBtn').toggle();
       });
 
